--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="text" id="text-input">
     <button id="insert-text">Inserir</button>
     <div id="meme-image-container">
-        <p id="meme-text"></p>
+        <div id="meme-text"></div>
     </div>
     <script src="script.js"></script>
 </body>
