--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <input type="text" id="text-input">
-    <button id="insert-text">Inserir</button>
+    <input type="file" id="meme-insert" accept="image/*">
     <div id="meme-image-container">
+            <img src="" alt="" id='meme-image'>
         <div id="meme-text"></div>
     </div>
     <script src="script.js"></script>
