--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body onload="listenAll()">
     <input type="text" id="text-input" maxlength="60">
     <input type="file" id="meme-insert" accept="image/*">
     <div id="meme-image-container">
             <img src="" alt="" id='meme-image'>
         <div id="meme-text"></div>
     </div>
+    <section id="templates">
+        <img src="imgs/meme1.png" alt="" id="meme-1">
+        <img src="imgs/meme2.png" alt="" id="meme-2">
+        <img src="imgs/meme3.png" alt="" id="meme-3">
+        <img src="imgs/meme4.png" alt="" id="meme-4">
+    </section>
     <button id="fire">Fire</button>
     <button id="water">Water</button>
     <button id="earth">Earth</button>
