preparando para adicionar ao github

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body onload="listenAll()">
-    <input type="text" id="text-input" maxlength="60">
-    <input type="file" id="meme-insert" accept="image/*">
+    <div id="text">
+        <input type="text" id="text-input" maxlength="60">
+        <input type="file" id="meme-insert" accept="image/*">
+    </div>
     <div id="meme-image-container">
             <img src="" alt="" id='meme-image'>
         <div id="meme-text"></div>
